Align Menu links horizontally in the center

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,3 +15,11 @@
 .app__navbar-logo img{
   width:150px;
 }
+
+.app__navbar-links{
+flex:1;
+display: flex;
+justify-content: center;
+align-items: center;
+list-style:none
+}
